docs/code_select.css: fix colour in dark mode
There was an issue with the colouration in dark mode on
li>div elements. This removes the background colour override
so that we can view these elements in dark mode.

--- a/docs/css/code_select.css
+++ b/docs/css/code_select.css
@@ -102,7 +102,6 @@ div.autodoc-members {
 }
 
 div.autodoc-content li div {
-  background-color: #f0f0ff;
   padding: 10px;
   font-size: 14px;
 }
